# Amazon_Reviews_Electronics

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  download_data.py  explore.ipynb  logger.py  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
project/: Dockerfile  app.py  requirements.txt
project/src/: config.py
project/src/pipeline/: clean_data.py  data_import_export.py  main.py  vectorization_prediction.py
scripts/: clean_data.py  data_import_export.py  explore.ipynb  main.py  vector.ipynb  vectorization_prediction.py
src/: config.py
src/bert/: __init__.py  bert_pipeline.py
src/pipeline/: __init__.py  vectorization_prediction.py
src/preprocessing/: __init__.py  clean_data.py  data_import_export.py
tests/: test_app.py
