[project]
name = "amazon-reviews-electronics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "kagglehub>=0.3.13",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
