[project]
name = "amazon-reviews-electronics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "kagglehub>=0.3.13",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
